     an error message, bug #9570)
   * better "choose attack direction using the last highlighted hex" on pack
     of units (bug #9649)
   * attack/move cursors and attack direction indicator are not used when
     observing (bug #9610)
 * WML engine:
   * now [base_unit]id= inside [unit] can extend upon existing unit types
   * new extra_defines key to define in campaigns some other preprocessor
     symbol *before* the files are repreprocessed
   * fog and shroud tiles are defined by the terrainWML instead of game_config
 * team color
   * allow color ranges to be defined on-the-fly (like color palettes)
   * now [side] colour=<string> is valid (previously only int)
 * miscellaneous and bug fixes
   * added a .desktop entry for the editor so that it is shown in the kde/gnome
     menu
   * rewrote the config merge routine (should improve parse time slightly)
   * various code cleanups
   * Isle of Anduin renamed to Isle of Alduin to avoid copyright problems.
   * the assertion 'str.size() <= 4' no longer happens instead the terrain is
      read as 'void' and an ingame message is shown (bug #9609)
   * IMPORTANT! End-of-scenario no longer takes you immediately to the
     next scenario or the lobby. Instead, you linger in browse mode --
     menu commands for chat, saving games, etc. are available.  Clicking
     end-of-turn ends the linger and takes you out.

Version 1.3.6:
 * language and i18n:
   * updated translations: Danish, Finnish, French, German
 * multiplayer:
   * the random start ToD option is now properly saved and loaded (bug #9532)
   * the map in the lobby could be randomly invisible due to an unitialized
     variable (bug #9555)
   * the automatic unit description used a non-MP safe way, this has been
     fixed
   * the unit name generation could with different locales call get_random() a
     different number of times. This lead to different names and traits. 
     Changed to call random a fixed number of times which fixes the traits.